# RustCraft

./: .gitignore  Cargo.toml  README.md  log.txt
model/: cube.json  face.json
shader/: cube.frag  cube.vert  face.vert  test.frag  test.vert
src/: gl_utils.rs  lib.rs  log.rs  main.rs
src/app/: events.rs  mod.rs  render.rs
src/camera/: god_camera.rs  mod.rs  space_camera.rs
src/model/: array_model.rs  element_model.rs  mod.rs  model.rs  model_file.rs
src/shader/: gl_utils.rs  mod.rs  shader.rs
src/texture/: mod.rs  texture.rs
src/utils/: mat.rs  math.rs  mod.rs  types.rs  uniform_f32.rs  uniform_f64.rs  uniform_i32.rs  uniform_u32.rs
src/utils/mat/: mat2.rs  mat2x3.rs  mat2x4.rs  mat3.rs  mat3x2.rs  mat3x4.rs  mat4.rs  mat4x2.rs  mat4x3.rs  mod.rs
src/utils/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
